Fixed Alignment and color issues on the scss page

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -46,7 +46,6 @@ a {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.6;
-    color: $text;
     text-decoration: none;
 
     &:hover {
